force-app/main/default/objects/FinancialAccount__c/FinancialAccount__c.object-meta.xml
<CustomObject>
    <label>Financial Account</label>
    <pluralLabel>Financial Accounts</pluralLabel>
    <nameField>
        <label>Financial Account Name</label>
        <type>AutoNumber</type>
        <displayFormat>FA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores a client&apos;s investment account details and target allocations.</description>
</CustomObject>