force-app/main/default/objects/FinancialAccount__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>Account Number</label>
    <description>Unique account identifier from source system</description>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>