force-app/main/default/objects/FinancialAccount__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <description>Type of investment account</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Brokerage</fullName>
                <default>true</default>
                <label>Individual Brokerage</label>
            </value>
            <value>
                <fullName>IRA - Traditional</fullName>
            </value>
            <value>
                <fullName>IRA - Roth</fullName>
            </value>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Joint Tenants</fullName>
            </value>
            <value>
                <fullName>Trust Account</fullName>
            </value>
            <value>
                <fullName>Custodial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>