force-app/main/default/objects/FinancialAccount__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact</label>
    <description>Parent client record</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>FinancialAccounts</relationshipName>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>