force-app/main/default/objects/FinancialAccount__c/fields/TargetBondPct__c.field-meta.xml
<CustomField>
    <fullName>TargetBondPct__c</fullName>
    <label>Target Bond %</label>
    <description>Target allocation to bonds</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>