force-app/main/default/objects/FinancialAccount__c/fields/TargetCashPct__c.field-meta.xml
<CustomField>
    <fullName>TargetCashPct__c</fullName>
    <label>Target Cash %</label>
    <description>Target allocation to cash/money market</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>