force-app/main/default/objects/FinancialAccount__c/fields/TargetEquityPct__c.field-meta.xml
<CustomField>
    <fullName>TargetEquityPct__c</fullName>
    <label>Target Equity %</label>
    <description>Target allocation to equities</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>