force-app/main/default/objects/FinancialAccount__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <label>Total Value</label>
    <description>Current total market value in USD</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>