force-app/main/default/objects/FinancialAccount__c/validationRules/Target_Allocations_Must_Sum_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Allocations_Must_Sum_100</fullName>
    <active>true</active>
    <description>Ensures target equity, bond, and cash allocations add up to 100%.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(TargetEquityPct__c)),
  NOT(ISBLANK(TargetBondPct__c)),
  NOT(ISBLANK(TargetCashPct__c)),
  ROUND(TargetEquityPct__c + TargetBondPct__c + TargetCashPct__c, 2) &lt;&gt; 100
)</errorConditionFormula>
    <errorMessage>Target allocations must add up to 100%. Current total: {0}%</errorMessage>
</ValidationRule>